fixed the image being too big when viewing with mobile screen

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ img {
     margin-left: 10px;
     justify-content: center;
     width: 70px;
-    height: auto;
+    height: 65px;
     border-radius: 20px;
     margin-bottom: 5px;
 }
